# eec106a_final_project

./: .gitignore  README.md
high_level_go_to_position_gazebo/: READ ME.txt  goto_position.py  tello_world.sdf
ros2_tello_ws/: requirements.txt  tello_full.launch.py
ros2_tello_ws/install/: local_setup.sh  setup.sh
ros2_tello_ws/install/tello_controller/lib/tello_controller/: tello_ar_tag_mission_node  tello_camera  tello_flight
ros2_tello_ws/install/tello_controller/share/tello_controller/: package.sh  package.xml
ros2_tello_ws/log/: latest_build
ros2_tello_ws/src/tello_controller/: package.xml  setup.py
ros2_tello_ws/src/tello_controller/tello_controller/: tello_ar_tag_mission_node.py  tello_aruco_navigator_node.py  tello_camera_node.py  tello_constants.py  tello_environment_node.py  tello_multi_ar_tag_mission_node.py
ros2_tello_ws/src/tello_controller/tello_controller/install/: local_setup.sh  setup.sh
ros2_tello_ws/src/tello_controller/tello_controller/log/: latest_build
ros2_tello_ws/src/tello_interfaces/: CMakeLists.txt  package.xml
ros2_tello_ws/src/tello_interfaces/msg/: TelloTelemetry.msg
ros2_tello_ws/src/tello_interfaces/srv/: SetCameraMode.srv  TelloCommand.srv
